--- a/escape-from-duckov/src/locales/ru.json
+++ b/escape-from-duckov/src/locales/ru.json
@@ -428,6 +428,8 @@
         "headgearTitle": "Головные Уборы",
         "otherTitle": "Прочее Снаряжение",
         "bodyTitle": "Тело",
+        "backpackTitle": "Рюкзак",
+        "earphoneTitle": "Наушники",
         "table": {
             "image": "Изображение",
             "name": "Название",
@@ -438,6 +440,7 @@
     "ItemsAmmunitionPage": {
         "title": "Боеприпасы Escape from Duckov",
         "subtitle": "Полная база данных боеприпасов Escape from Duckov со всеми типами пуль, калибрами и патронами. Просмотрите пистолетные боеприпасы, винтовочные патроны, дробовые гильзы и специальные патроны с подробными характеристиками урона и информацией о совместимости оружия.",
+        "ammoTitle": "Боеприпасы",
         "table": {
             "image": "Изображение",
             "name": "Название",
@@ -448,6 +451,8 @@
     "ItemsKeyPage": {
         "title": "Ключи Escape from Duckov",
         "subtitle": "Полная база данных ключей Escape from Duckov, включающая сертификаты J-Lab, карты доступа, заводские ключи, ключи от общежития и ключи для конкретных локаций. Просмотрите сертификаты J-Lab Уровня 1-3, цветные карты доступа и специальные билеты с информацией о локациях.",
+        "accessCardTitle": "Карты доступа",
+        "keyTitle": "Ключи",
         "table": {
             "image": "Изображение",
             "name": "Название",
