--- a/escape-from-duckov/src/locales/en.json
+++ b/escape-from-duckov/src/locales/en.json
@@ -398,7 +398,7 @@
       ]
     },
     "fish": {
-      "title": "Fish",
+      "title": "Fishing",
       "desc": "Catchable fish species and fishing-related items for your survival needs.",
       "tags": [
         "Fishing",
