--- a/escape-from-duckov/src/locales/ru.json
+++ b/escape-from-duckov/src/locales/ru.json
@@ -1,4 +1,31 @@
 {
+    "Navigation": {
+        "home": "Главная",
+        "guides": "Гайды",
+        "wiki": "Вики",
+        "items": "Предметы",
+        "maps": "Карты",
+        "mods": "Моды"
+    },
+    "Footer": {
+        "description": "Гайды, вики и инструменты сообщества, созданные игроками.",
+        "quickLinks": "Быстрые ссылки",
+        "legal": "Юридическая информация",
+        "copyright": "© 2025 duckovgame.com. Все права защищены.",
+        "disclaimer": "duckovgame.com не связан, не одобрен и не связан с оригиналом или его издателями. Это независимый фан-сайт, созданный только в информационных целях. Все товарные знаки и авторские права принадлежат их соответствующим владельцам.",
+        "links": {
+            "guides": "Гайды",
+            "wiki": "Вики",
+            "items": "Предметы",
+            "maps": "Карты",
+            "mods": "Моды",
+            "privacyPolicy": "Политика конфиденциальности",
+            "termsOfService": "Условия использования",
+            "copyright": "Авторское право",
+            "aboutUs": "О нас",
+            "contactUs": "Связаться с нами"
+        }
+    },
     "seo": {
         "home": {
             "title": "Escape from Duckov | Вики, гайды, карты, моды, квесты, оружие",
