--- a/escape-from-duckov/src/locales/pt.json
+++ b/escape-from-duckov/src/locales/pt.json
@@ -5,7 +5,8 @@
         "wiki": "Wiki",
         "items": "Itens",
         "maps": "Mapas",
-        "mods": "Mods"
+        "mods": "Mods",
+        "toggleMenu": "Alternar menu"
     },
     "Footer": {
         "description": "Guias, wiki e ferramentas da comunidade criadas por jogadores.",
@@ -13,6 +14,10 @@
         "legal": "Informações legais",
         "copyright": "© 2025 duckovgame.com. Todos os direitos reservados.",
         "disclaimer": "duckovgame.com não é afiliado, endossado ou conectado ao original ou seus editores. Este é um site de fãs independente criado apenas para fins informativos. Todas as marcas comerciais e direitos autorais pertencem aos seus respectivos proprietários.",
+        "social": {
+            "facebook": "Visite nossa página no Facebook",
+            "twitter": "Visite nossa página no X (Twitter)"
+        },
         "links": {
             "guides": "Guias",
             "wiki": "Wiki",
