--- a/escape-from-duckov/src/locales/ru.json
+++ b/escape-from-duckov/src/locales/ru.json
@@ -5,7 +5,8 @@
         "wiki": "Вики",
         "items": "Предметы",
         "maps": "Карты",
-        "mods": "Моды"
+        "mods": "Моды",
+        "toggleMenu": "Переключить меню"
     },
     "Footer": {
         "description": "Гайды, вики и инструменты сообщества, созданные игроками.",
@@ -13,6 +14,10 @@
         "legal": "Юридическая информация",
         "copyright": "© 2025 duckovgame.com. Все права защищены.",
         "disclaimer": "duckovgame.com не связан, не одобрен и не связан с оригиналом или его издателями. Это независимый фан-сайт, созданный только в информационных целях. Все товарные знаки и авторские права принадлежат их соответствующим владельцам.",
+        "social": {
+            "facebook": "Посетите нашу страницу в Facebook",
+            "twitter": "Посетите нашу страницу в X (Twitter)"
+        },
         "links": {
             "guides": "Гайды",
             "wiki": "Вики",
