--- a/escape-from-duckov/src/locales/de.json
+++ b/escape-from-duckov/src/locales/de.json
@@ -5,7 +5,8 @@
         "wiki": "Wiki",
         "items": "Gegenstände",
         "maps": "Karten",
-        "mods": "Mods"
+        "mods": "Mods",
+        "toggleMenu": "Menü umschalten"
     },
     "Footer": {
         "description": "Von Spielern erstellte Anleitungen, Wikis und Community-Tools.",
@@ -13,6 +14,10 @@
         "legal": "Rechtliches",
         "copyright": "© 2025 duckovgame.com. Alle Rechte vorbehalten.",
         "disclaimer": "duckovgame.com ist nicht mit dem Original oder dessen Verlegern verbunden, unterstützt oder verbunden. Dies ist eine unabhängige Fan-Website, die nur zu Informationszwecken erstellt wurde. Alle Marken und Urheberrechte gehören ihren jeweiligen Eigentümern.",
+        "social": {
+            "facebook": "Besuchen Sie unsere Facebook-Seite",
+            "twitter": "Besuchen Sie unsere X (Twitter) Seite"
+        },
         "links": {
             "guides": "Anleitungen",
             "wiki": "Wiki",
