--- a/escape-from-duckov/src/locales/ko.json
+++ b/escape-from-duckov/src/locales/ko.json
@@ -5,7 +5,8 @@
         "wiki": "위키",
         "items": "아이템",
         "maps": "지도",
-        "mods": "모드"
+        "mods": "모드",
+        "toggleMenu": "메뉴 토글"
     },
     "Footer": {
         "description": "플레이어가 만든 가이드, 위키 및 커뮤니티 도구.",
@@ -13,6 +14,10 @@
         "legal": "법적 정보",
         "copyright": "© 2025 duckovgame.com. 판권 소유.",
         "disclaimer": "duckovgame.com은 원본 또는 그 출판사와 제휴, 승인 또는 연결되지 않았습니다. 이것은 정보 제공 목적으로만 만들어진 독립적인 팬 사이트입니다. 모든 상표 및 저작권은 각 소유자에게 속합니다.",
+        "social": {
+            "facebook": "Facebook 페이지 방문",
+            "twitter": "X (Twitter) 페이지 방문"
+        },
         "links": {
             "guides": "가이드",
             "wiki": "위키",
